--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   },
 
   "scripts": {
-    "server": "node server.js",
-    "client": "node scripts/start-client.js",
-    "start": "npm run client",
-    "build": "react-scripts build",
+    "start": "node server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+
+  "devDependencies": {
+    "babel-core": "*",
+    "babel-loader": "*",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "*",
+    "webpack": "*",
+    "webpack-cli": "^2.1.2"
+  },
+
   "main": "server.js"
 }
