--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
 
   "scripts": {
+    "server": "node server.js",
     "start": "node server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
