--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "mongoose": "^5.0.17",
     "react": "^16.3.2",
@@ -13,18 +14,16 @@
 
   "scripts": {
     "server": "node server.js",
-    "start": "node server.js",
+    "client": "node scripts/start-client.js",
+    "start": "concurrently \"nodemon server.js\" \"npm run clien\"",
+    "build": "node scripts/build.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
 
   "devDependencies": {
-    "babel-core": "*",
-    "babel-loader": "*",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "*",
-    "webpack": "*",
-    "webpack-cli": "^2.1.2"
+   "concurrently": "^3.5.0",
+   "nodemon": "^1.12.1"
   },
 
   "main": "server.js"
